<resources>
    <string name="app_name">mob</string>
    <string name="lbl_continue">Continue</string>
<string name="lbl_fifty_one">FIFTY
ONE</string>
<string name="lbl_peach">PEACH</string>
<string name="lbl_haz_ran">HAZİRAN</string>
<string name="lbl_ye_l">YEŞİL</string>
<string name="lbl_sunday">SUNDAY</string>
<string name="lbl_march">MARCH</string>
    <string name="lbl_wednesday">WEDNESDAY</string>
<string name="lbl_score">SCORE</string>
<string name="lbl_password2">password</string>
<string name="lbl_ifre2">şifre</string>
<string name="lbl_ifre">Şifre</string>
<string name="lbl_altinda">...ALTINDA.</string>
    <string name="lbl_ho_geldiniz">Hoşgeldiniz!</string>
<string name="lbl_ananas">ANANAS</string>
<string name="msg_hadi_rendikle">Hadi öğrendiklerimizi pekiştirelim!</string>
    <string name="msg_arpma_i_lemler">Çarpma işlemlerinin cevaplarını yanına yaz!</string>
<string name="lbl_6_g_n">6.GÜN</string>
    <string name="lbl_2_g_n">2.GÜN</string>
    <string name="lbl_4_g_n">4.GÜN</string>
    <string name="lbl_7_g_n">7.GÜN</string>
    <string name="lbl_5_g_n">5.GÜN</string>
<string name="lbl_5_x_0">5 X 0 =</string>
<string name="msg_sepette_bulunan">SEPETTE BULUNAN
 ELMA SAYISI</string>
<string name="msg_a_a_daki_video2">Aşağıdaki videoyu kafamızı hareket ettirmeden izleyelim!</string>
<string name="msg_oynamak_istedi">Oynamak istediğin kategoriyi seç!</string>
<string name="lbl_october">OCTOBER</string>
<string name="msg_let_s_fill_in_t">"Let's fill in the blanks!"</string>
<string name="lbl_5_x_9">5 X 9 =</string>
<string name="lbl_5_x_8">5 X 8 =</string>
<string name="lbl_5_x_7">5 X 7 =</string>
<string name="lbl_5_x_6">5 X 6 =</string>
<string name="lbl_5_x_5">5 X 5 =</string>
<string name="lbl_5_x_4">5 X 4 =</string>
    <string name="lbl_5_x_3">5 X 3 =</string>
    <string name="lbl_5_x_2">5 X 2 =</string>
    <string name="lbl_5_x_1">5 X 1 =</string>
    <string name="lbl_elindeki_alt_n">Elindeki altın:</string>
    <string name="lbl_d_l_n_z_se_n">DİLİNİZİ
SEÇİN</string>
    <string name="msg_a_a_daki_video">Aşağıdaki videoyu izleyelim!</string>
<string name="msg_in_which_one_is4">In which one is the ball near the table?</string>
<string name="msg_in_which_one_is3">In which one is the ball in front of the table?</string>
<string name="msg_in_which_one_is2">In which one is the ball on the table?</string>
<string name="lbl_altmi_dokuz">ALTMIŞ 
DOKUZ</string>
<string name="msg_select_your_l">SELECT
 YOUR 
LANGUAGE</string>
<string name="lbl_frog">FROG</string>
<string name="msg_merhaba_sonba">Merhaba! 
Sonbahar mevsimine hoş geldin!
 Bu mevsimde yapraklar renk değiştirir ve havalar serinler. Ayrıca, sonbahar mevsiminde üzüm, elma, balkabağı gibi lezzetli meyveler de ortaya çıkar. Bu mevsimde evde sıcak çikolata veya çay içmek harika bir seçenek olabilir.</string>
    <string name="lbl_password">Password</string>
<string name="lbl_banana">BANANA</string>
<string name="lbl_isim">isim</string>
    <string name="lbl_sifredogru">Şifrenizi doğrulayın</string>
    <string name="lbl_passwordcon">Confirm your password</string>
    <string name="lbl_pazar">PAZAR</string>
    <string name="lbl_4_x_3">4 X 3 =</string>
    <string name="lbl_4_x_2">4 X 2 =</string>
    <string name="lbl_4_x_1">4 X 1 =</string>
    <string name="lbl_4_x_4">4 X 4 =</string>
    <string name="lbl_4_x_7">4 X 7 =</string>
    <string name="lbl_4_x_8">4 X 8 =</string>
    <string name="lbl_4_x_9">4 X 9 =</string>
    <string name="lbl_4_x_6">4 X 6 =</string>
<string name="lbl_4_x_5">4 X 5 =</string>
    <string name="lbl_4_x_0">4 X 0 =</string>
    <string name="lbl_06_45">06.45</string>
<string name="lbl_yaninda">...YANINDA.</string>
    <string name="lbl_12">1.</string>
<string name="lbl_13">+1</string>
<string name="lbl_10">10</string>
<string name="lbl_sign_up">Sign up</string>
    <string name="lbl_sign_up2">Sıgn up</string>
    <string name="lbl_turuncu">TURUNCU</string>
<string name="lbl_sim">İsim</string>
<string name="lbl_ubat">ŞUBAT</string>
<string name="msg_4_sepette_topla">4 sepette toplam 12 elma bulunurmuş.</string>
<string name="msg_merhaba_yaz_m">Merhaba!
 Yaz mevsimine hoş geldin! 
Bu mevsimde günler daha uzun ve havalar daha sıcak. Sıcak havalarda serinlemek için yüzme havuzlarına veya denize gitmek harika bir seçenek olabilir. Ayrıca piknik yapabilir, buzlu içecekler içebilir veya evde veya dışarıda tatil yapabilirsin.</string>
<string name="lbl_fox">FOX</string>
<string name="lbl_s_ncap">SİNCAP</string>
<string name="lbl_december">DECEMBER</string>
    <string name="lbl_esles">....</string>
    <string name="lbl_saatkac">Saat kaç? :</string>
    <string name="lbl_time">What time is it?:</string>
    <string name="lbl_gun">Bu kaçıncı gün?:</string>
    <string name="lbl_day">What day is it?:</string>
    <string name="lbl_bosluk_bir">1.Boşluk:</string>
    <string name="lbl_bosluk_iki">2.Boşluk:</string>
    <string name="lbl_bosluk_uc">3.Boşluk:</string>
    <string name="lbl_bosluk_dort">4.Boşluk:</string>
    <string name="lbl_bosluk_one">First blank:</string>
    <string name="lbl_bosluk_two">Second blank:</string>
    <string name="lbl_bosluk_three">Third blank:</string>
    <string name="lbl_bosluk_four">Fourth blank:</string>
<string name="msg_merhaba_ben_mob">MERHABA BEN MOB!

    ÖĞRENME SÜRECİNDE YANINDA OLACAK EN İYİ ARKADAŞINIM.BIRLIKTE SAATLERİ, MEVSİMLERİ, GÜNLERİ  VE DAHA BIRÇOK BİLGİYİ ÖĞRENECEĞİZ.

    HAZIRSAN HADİ BAŞLAYALIM!</string>
    <string name="lbl_n_nde">...ÖNÜNDE.</string>
<string name="msg_choose_the_numb">Choose the number you want to work with!</string>
<string name="msg3">..................</string>
<string name="msg2">................</string>
<string name="msg_rne_in_s">Örneğin...
...sırtımız vücudumuzun arkasındadır.</string>
<string name="lbl_otuz">OTUZ ÜÇ</string>
<string name="lbl_on">...ON...</string>
<string name="msg_merhaba_bu_b10">Merhaba! 
Bu bölümde duyduğunu yazma yeteneğini geliştireceksin. Duyduğun kelimeleri ses kaydının altındaki kutucuğa yazman gerekiyor.
Hadi başlayalım!</string>
<string name="msg_merhaba_bu_b11">Merhaba! 
Bu bölümde kazandığın altınları görebilir ve skor tablosuna bakar arkadaşlarınla yarışabilirsin.
Hadi bi göz atalım!</string>
<string name="msg_hello_in_this4">Hello!

In this section we will learn how to multiply.

Let\u2019s start!</string>
<string name="msg_hello_in_this3">Hello! 
In this section we will learn how to read an analog clock. Clocks are very important for planning our daily lives. It allows us to keep track of when we wake up and go to school and when we have breaks. 
Let\u2019s learn!</string>
<string name="msg_there_are_a_tot">There are a total of 12 apples in 4 baskets.</string>
<string name="lbl_red">RED</string>
<string name="msg_hello_in_this2">Hello! 
In this section we will learn the months. There are 12 months in total in a year; 3 months of spring, 3 months of summer, 3 months of autumn and 3 months of winter. 
So what are these? 
Let\u2019s learn!</string>
<string name="lbl_ell_b_r">ELLİ BİR</string>
<string name="lbl_saturday">SATURDAY</string>
<string name="msg_hello_in_this7">Hello!

In this section you can see the gold you earned and compete with your friends on the scoreboard.

Let\u2019s take a look!</string>
<string name="msg_hello_in_this6">Hello!
In this section you will improve your ability to write what you hear.
You need to write the words you hear in the box under the sound recording.
Let\u2019s start!</string>
<string name="msg_hello_in_this5">Hello!

In this section we will learn how to improve our reading speed by exercising our eye muscles.
All you have to do is follow the visuals with your head fixed.

Let\u2019s start!</string>
<string name="lbl_let_s_check2">Let\u2019s check</string>
<string name="lbl_let_s_check3">"Let's check!"</string>
<string name="lbl_puan">PUAN</string>
<string name="lbl_november">NOVEMBER</string>
<string name="lbl_green">GREEN</string>
<string name="lbl_on_sek_z">ON SEKİZ</string>
<string name="msg_merhaba_k_m">Merhaba!
 Kış mevsimine hoş geldin! 
Bu mevsimde kar yağar ve dışarıda yapacak birçok aktivite vardır. Kızak kayabilir, kardan adam yapabilir veya kar topu oynayabilirsin. Yılbaşı kutlamaları ve Noel tatili ile birlikte aile ve arkadaşlarla güzel zamanlar geçirebilirsin.</string>
<string name="lbl_a_ustos">AĞUSTOS</string>
<string name="lbl_sepetler">SEPETLER</string>
<string name="lbl_per_embe">PERŞEMBE</string>
<string name="lbl_mav">MAVİ</string>
<string name="lbl_may">MAY</string>
<string name="msg_hello_welcome2">"Hello!\u2028Welcome to the spring season! During this season, nature comes back to life, trees become greener, and flowers bloom. The temperatures rise, and the sun is seen more often. It's a perfect time for great activities like hiking, cycling, and having picnics in nature."</string>
<string name="msg_hello_welcome3">Hello!\u2028Welcome to the fall season!\u2028During this season, the leaves change colors, and the weather cools down. Also, delicious fruits like grapes, apples, and pumpkins emerge during the fall season. Drinking hot chocolate or tea at home can be a great option during this season.</string>
<string name="msg_inde_3_tane_e">İçinde 3 tane elma bulunan bu sepetten 4 tane alırsak kaç elmamız olur?</string>
<string name="msg_hello_welcome4">"Hello!\u2028Welcome to the winter season!\u2028During this season, it snows, and there are many outdoor activities to do. You can go sledding, build a snowman, or have a snowball fight. You can also spend quality time with family and friends during the Christmas holidays and New Year's celebrations."</string>
<string name="lbl_kontrol_edelim">Kontrol edelim!</string>
<string name="msg_if_you_watch_th">If you watch the video once a day, you will start reading much faster!</string>
<string name="lbl_devam">Devam</string>
<string name="lbl_pembe">PEMBE</string>
<string name="lbl_ocak">OCAK</string>
    <string name="lbl_giri_yap">Giriş yap</string>
<string name="lbl_st_nde">...ÜSTÜNDE.</string>
<string name="lbl_lemon">LEMON</string>
<string name="lbl_august">AUGUST</string>
<string name="lbl_kontrol_edelim2">Kontrol edelim</string>
<string name="lbl_aralik">ARALIK</string>
<string name="msg_your_total_gold">Your total gold:</string>
<string name="lbl_day_6">DAY 6</string>
    <string name="lbl_day_2">DAY 2</string>
    <string name="lbl_day_4">DAY 4</string>
    <string name="lbl_day_5">DAY 5</string>
    <string name="lbl_day_7">DAY 7</string>
<string name="lbl_day_3">DAY 3</string>
<string name="lbl_behind">...BEHIND...</string>
<string name="lbl_day_1">DAY 1</string>
<string name="lbl_top_masan_n">Top masanın...</string>
<string name="msg_a_a_daki_g_rse">Aşağıdaki görseller hangi mevsime aittir?</string>
<string name="msg_merhaba_bu_b4">Merhaba! 
Bu bölümde sayı dizileri hafızanı test etmek için kullanılacaktır. 
Sayı dizisi animasyonunu izle.
Dizideki sayıları mümkün olduğunca hatırlamaya çalış.
Daha sonra, bir metin kutusunda sayıları TERS ÇEVİREREK doğru bir şekilde yaz.
Doğru yanıt verirsen, bir sonraki seviyeye geçebilirsin.
Hadi başlayalım!</string>
<string name="msg_merhaba_bu_b3">Merhaba! 
Bu bölümde sayı dizileri hafızanı test etmek için kullanılacaktır. 
Sayı dizisi animasyonunu izle.
Dizideki sayıları mümkün olduğunca hatırlamaya çalış.
Daha sonra, bir metin kutusunda sayıları doğru bir şekilde yaz.
Doğru yanıt verirsen, bir sonraki seviyeye geçebilirsin.
Hadi başlayalım!</string>
<string name="msg_login_or_sign_u">Login or Sign up</string>
<string name="lbl_email">Email</string>
<string name="lbl_login">Logın</string>
<string name="lbl_ifre_olu_turun">Şifre oluşturun</string>
<string name="lbl_welcome">Welcome!</string>
<string name="msg_giri_yap_n_vey">Giriş yapın veya kaydolun</string>
<string name="lbl_email2">Email</string>
<string name="lbl_kaydol">Kaydol</string>
<string name="msg_did_you_forget">Did you forget your password?</string>
</resources>