<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="kaydolVM" type="com.mob.app.modules.kaydol.data.viewmodel.KaydolVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearKaydol"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleyellow_100">
        <TextView android:ellipsize="end"
            android:id="@+id/txtHogeldiniz"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:singleLine="true"
            android:text="@{kaydolVM.kaydolModel.txtHogeldiniz}"
            style="@style/txtABeeZeeitalic36" tools:text="@string/lbl_ho_geldiniz"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGiriyapnvey"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{kaydolVM.kaydolModel.txtGiriyapnvey}"
            style="@style/txtABeeZeeregular17" tools:text="@string/msg_giri_yap_n_vey"/>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearRowgiriyap"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStyleblue_100cornerRadius">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumngiriyap"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_19pxv"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_weight="0.28" android:layout_width="0dp"
                android:orientation="vertical" style="@style/groupStylecornerRadius_1">
                <TextView android:ellipsize="end"
                    android:gravity="start" android:id="@+id/txtGiriyap"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{kaydolVM.kaydolModel.txtGiriyap}"
                    style="@style/txtABeeZeeregular17_3" tools:text="@string/lbl_giri_yap"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnKaydol"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.72" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_kaydol"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_kaydol"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnsim"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_2">
            <TextView android:ellipsize="end" android:id="@+id/txtSim"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{kaydolVM.kaydolModel.txtSim}"
                style="@style/txtABeeZeeregular17_2" tools:text="@string/lbl_sim"/>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/lbl_isim"
                android:id="@+id/textInputLayIsimEditKaydol"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:ellipsize="end"
                    android:id="@+id/etIsimEditKaydol"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={kaydolVM.kaydolModel.etIsimEditKaydolValue}"
                    android:textColor="@color/black_900" android:textSize="@dimen/_15pxh"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnemail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_2">
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{kaydolVM.kaydolModel.txtEmail}"
                style="@style/txtABeeZeeregular17_2" tools:text="@string/lbl_email"/>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/lbl_email2"
                android:id="@+id/textInputLayEmailKaydol"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:ellipsize="end"
                    android:id="@+id/etEmailKaydol"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={kaydolVM.kaydolModel.etEmailKaydolValue}"
                    android:textColor="@color/black_900" android:textSize="@dimen/_15pxh"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnifreoluturun"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_2">
            <TextView android:ellipsize="end"
                android:id="@+id/txtIfreoluturun"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{kaydolVM.kaydolModel.txtIfreoluturun}"
                style="@style/txtABeeZeeregular17_2" tools:text="@string/lbl_ifre_olu_turun"/>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/lbl_ifre2"
                android:id="@+id/textInputLaySifreOlusturKay"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">
                <com.google.android.material.textfield.TextInputEditText
                    android:ellipsize="end"
                    android:id="@+id/etSifreOlusturKay"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={kaydolVM.kaydolModel.etSifreOlusturKayValue}"
                    android:textColor="@color/black_900" android:textSize="@dimen/_15pxh"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowdevam"
            android:layout_height="70dp"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_150pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylelight_blue_100cornerRadius">
            <TextView android:ellipsize="end" android:id="@+id/txtDevam"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginStart="@dimen/_131pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_weight="0.89" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_31pxh"
                android:singleLine="true"
                android:text="@{kaydolVM.kaydolModel.txtDevam}"
                style="@style/txtAksaraBaliGalangregular18" tools:text="@string/lbl_devam"/>
            <ImageView android:id="@+id/imageArrowright"
                android:layout_height="@dimen/_15pxh"
                android:layout_marginBottom="@dimen/_24pxv"
                android:layout_marginEnd="@dimen/_138pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="@dimen/_7pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowright"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
        </LinearLayout>
    </LinearLayout>
</layout>
