<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginVM" type="com.mob.app.modules.login.data.viewmodel.LoginVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleyellow_100">
        <TextView android:ellipsize="end"
            android:id="@+id/txtWelcome"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_54pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtWelcome}"
            style="@style/txtABeeZeeitalic36" tools:text="@string/lbl_welcome"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLoginorSignu"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtLoginorSignu}"
            style="@style/txtABeeZeeregular17" tools:text="@string/msg_login_or_sign_u"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowlogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:text="@string/lbl_sign_up"
            android:orientation="horizontal" style="@style/groupStyleblue_1">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogin"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_weight="0.76" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/lbl_login"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_login"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSignUp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_50pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_weight="0.72" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_3" tools:text="@string/lbl_sign_up"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnemail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_2">
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtEmail}"
                style="@style/txtABeeZeeregular17_2" tools:text="@string/lbl_email"/>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/lbl_email"
                android:id="@+id/textInputLayEmailEditGiris"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etEditValue}"
                    android:textColor="@color/black_900"
                    android:textSize="@dimen/_15pxh" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnpassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_41pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_2">
            <TextView android:ellipsize="end" android:id="@+id/lbl_password"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtPassword}"
                style="@style/txtABeeZeeregular17_2" tools:text="@string/lbl_password"/>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/lbl_password"
                android:id="@+id/textInputLayEditpass"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={loginVM.loginModel.etEditpassValue}"
                    android:textColor="@color/black_900"
                    android:textSize="@dimen/_15pxh" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDidyouforget"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{loginVM.loginModel.txtDidyouforget}"
            style="@style/txtABeeZeeregular17" textUnderline="true" tools:text="@string/msg_did_you_forget"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginStart="@dimen/_21pxh"
            android:layout_marginTop="@dimen/_150pxv"
            android:layout_marginEnd="@dimen/_21pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:backgroundTint="@color/light_blue_100"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:text="@string/lbl_login"
            android:textColor="@color/bluegray_902">

        </Button>
    </LinearLayout>
</layout>
